--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://imaginative-bublanina-406da2.netlify.app'
+baseURL = 'https://oldrusty.io/'
 languageCode = 'en-gb'
 title = 'OldRusty'
 theme = "terminal"
