add some colour, also update TOC

--- a/config.toml
+++ b/config.toml
@@ -12,13 +12,13 @@ contentTypeName = "p"
 [languages]
   [languages.en]
     languageName = "English"
-    title = "OldRusty"
+    title = "🦀 OldRusty"
     subtitle = "Musings of a dude learning rust"
-    owner = "Richard Bagshaw"
-    keywords = "Richard Bagshaw"
+    owner = "bagwaa"
+    keywords = "bagwaa"
     copyright = "Content by Richard Bagshaw © 2022"
-    menuMore = "Show more"
-    readMore = "Read more"
+    menuMore = "🦀 Show more"
+    readMore = "🦀 Read more"
     readOtherPosts = "Read other posts"
     newerPosts = "Newer posts"
     olderPosts = "Older posts"
@@ -32,9 +32,9 @@ contentTypeName = "p"
     [languages.en.menu]
       [[languages.en.menu.main]]
         identifier = "home"
-        name = "Home"
+        name = "🏠 Home"
         url = "/"
       [[languages.en.menu.main]]
         identifier = "table-of-contents"
-        name = "Table of Contents"
+        name = "📖 Table of Contents"
         url = "/table-of-contents"
