--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ contentTypeName = "p"
     missingBackButtonLabel = "Back to home page"
 
     [languages.en.params.logo]
-      logoText = "OldRusty - a journey with Rust"
+      logoText = "OldRusty"
       logoHomeLink = "/"
 
     [languages.en.menu]
